# messages-lib-app

./: CMakeLists.txt  README.md  journal_app.cpp  journal_lib.cpp  journal_lib.hpp  log.txt  stats_collector.cpp
tests/: journal_tests.cpp  stats_tests.cpp
